# TimeLogger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev.db  pip3.9  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 0005_conversation_otp.py  20241128_120000_init.py  20241129_110000_invitation_enhancements.py  20241129_150000_chat_rooms.py  20241130_130000_chat_reads_and_message_meta.py  20241201_shift_templates.py  20241202_shift_overrides.py
api/: index.py
app/: config.py  constants.py  db.py  main.py  migration_runner.py
app/models/: __init__.py  chat_room.py  chat_room_member.py  chat_room_read.py  deduction.py  leave.py  message.py  organization.py  roll_call.py  shift.py  user.py  work_session.py
app/routers/: __init__.py  admin.py  auth.py  chat.py  dashboard.py  reports.py  roll_calls.py  sessions.py  users.py
app/schemas/: __init__.py  auth.py  chat.py  report.py  roll_call.py  session.py  user.py
app/services/: attendance.py  mailer.py  reporting.py  rollcall_scheduler.py  shifts.py
app/static/css/: styles.css
app/static/js/: app.js  chat.js  reports.js  rollcall.js
app/static/sounds/: README.txt
app/templates/: base.html
app/templates/admin/: leaves.html  reports.html  shifts.html  users.html
app/templates/auth/: first_login.html  login.html  signup.html
app/templates/chat/: room.html
app/templates/dashboard/: history.html  index.html  profile.html
docs/: user_guide.md
scripts/: remove_demo_accounts.py  runserver.py  seed_demo.py  smoke_test.py
